samples/_failures_safe/1761419990_feff24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b77b3553.c: In function ‘main’:
./samples/SAFE/__tmp_b77b3553.c:179:9: error: expected expression at end of input
  179 |         } else if (strcmp(input, "quit") ==
      |         ^
./samples/SAFE/__tmp_b77b3553.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b77b3553.c:179:9: error: expected declaration or statement at end of input
